# aggregation_agent

./: .gitignore  app.py  pyproject.toml  readme.md
agents/: __init__.py  aggregation_agent.py  column_mapping_agent.py
aggregation_agent/agents/: aggregation_agent.py  column_mapping_agent.py
aggregation_agent/config/: model_config.py  prompt_config.json
aggregation_agent/views/: streamlit_views.py
config/: model_config.py  prompt_config.json
examples/: app.py
