[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sfn-aggregation-agent"
version = "0.1.0"
authors = [
    { name = "StepFn AI", email = "contact@stepfn.com" },
]
description = "StepFn Aggregation Agent"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "sfn_blueprint==0.4.2"
]

[project.urls]
"Homepage" = "https://github.com/stepfnAI/aggregation-agent"
"Bug Tracker" = "https://github.com/stepfnAI/aggregation-agent/issues"

[tool.setuptools]
packages = ["agents"]