[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfn-aggregation-agent"
version = "0.1.0"
authors = [
    { name = "StepFn AI" },
]
description = "StepFn Aggregation Agent"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "sfn_blueprint==0.4.2"
]

[project.urls]
"Homepage" = "https://github.com/stepfnAI/aggregation_agent"
"Bug Tracker" = "https://github.com/stepfnAI/aggregation_agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["aggregation_agent"]