[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfn-aggregation-agent"
version = "0.1.0"
authors = [
    { name = "StepFn AI" },
]
description = "StepFn Aggregation Agent"
readme = "readme.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "sfn-blueprint==0.5.2",
    "sfn-llm-client==0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/stepfnAI/aggregation_agent"
"Bug Tracker" = "https://github.com/stepfnAI/aggregation_agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["aggregation_agent"]